1.6.1
Added opening tab to right of current tab or at end, see prefs.
Fixed copy/cut/delete after vertical selection.
Added 'Vertical Paste'  to Edit menu. Empty/short lines are padded with spaces if needed before pasting.
Output msgkey ( session ID ) on start up.
Added vertical delete.
Added vertical cut.
Added "Auto Set Tabs" to prefs to set tabs to one space when ALT selecting and reset on mouse release.
Fixed signal name change in terminal plugin for qt6.
Set min tab width to 1.
Added vertical select ( hold 'CTRL+ALT' when drag selecting text ).
Added number of sessions to prefs max=128 default 24.
Added extra mime types to cpplang plugin.
Minor fix to .desktop files.
Added extra data to shm for the future.
Added semaphores to single instance app ( not really need yet ).
Clean up msg queues on exit with multi instance.
Delete shared mem and msg queue on exit.
Moved from QSharedMemory to normal linux shared memory ( qt screws with the key ).
Fixed major exit error.
Added '-r/--raise' option to kkeditqtmsg.
Trapped SIGUSR1 to force checking of message queue.
Trapped SIGINT/SIGTERM for cleanup.
Moved to shared memory from lock files for single instance.

1.6.0
Added right click context menu to terminal plugin for copying pasting etc.
Sorted plugins in prefs dialog.
Minor gui tweaks.
Removed some redundant code.
Better function etc recognition especially for html.
Better file type guess for functions.
Fixed finding definition on files with spaces in the path.
Updated html tags help.
More html tags.
Added input to controls in htmltags.
Removed duplicate image item from htmltags.
Added more html tags.
Fixed unicode pargraph endings when passing selection to html tags.
Now uses multi threads when building plugins.
Added menu icon to htmltags plugin.
Html tags plug is now also in main plugin menu.
Fixed enabling about/settings buttons in plug prefs dialog when enabling/disabling plugin.
Added help docs to HTML tag plugin.
Added submenus to HTML tag plugin.